package com.itbird;

import android.app.Application;

/**
 * Created by itbird on 2022/2/28
 */
public class APP extends Application {
    @Override
    public void onCreate() {
        super.onCreate();
    }
}
