package com.itbird.mvp.google;

/**
 * Google Demo
 * Created by itbird on 2022/2/25
 */
public interface BasePresenter {
}
